--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,411 @@
-Flask
-requests
-python-dotenv
+absl-py==1.4.0
+aiohttp==3.8.5
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.9.0
+appnope==0.1.3
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+asttokens==2.2.1
+astunparse==1.6.3
+async-timeout==4.0.2
+attrs==23.1.0
+Authlib==1.6.3
+backcall==0.2.0
+base32hex==1.0.2
+beautifulsoup4==4.12.2
+bleach==6.0.0
+blinker==1.6.2
+blis==1.0.1
+bs4==0.0.1
+cachetools==5.3.0
+catalogue==2.0.10
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+chronometry==2020.11.12
+click==8.1.3
+cloudpathlib==0.20.0
+colouration==2020.7.26
+comm==0.1.3
+confection==0.1.5
+contourpy==1.0.7
+cryptography==41.0.2
+cycler==0.11.0
+cymem==2.0.10
+debugpy==1.6.7
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.6
+disk==2021.6.29
+distro==1.8.0
+docopt==0.6.2
+exceptiongroup==1.1.2
+executing==1.2.0
+fastjsonschema==2.16.3
+filelock==3.16.1
+flash==1.0.3
+Flask==2.3.2
+Flask-Login==0.6.3
+flask-sock==0.6.0
+flatbuffers==23.5.9
+flexcache==0.3
+flexparser==0.4
+fonttools==4.39.3
+fqdn==1.5.1
+frozenlist==1.4.0
+fsspec==2024.10.0
+func-timeout==4.3.5
+fuzzywuzzy==0.18.0
+gast==0.4.0
+geographiclib==2.0
+geopy==2.3.0
+google-api-core==2.11.1
+google-api-python-client==1.7.9
+google-auth==2.18.0
+google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.4.0
+google-genai==1.21.1
+google-pasta==0.2.0
+googleapis-common-protos==1.59.1
+grpcio==1.54.0
+gspread==5.10.0
+h11==0.16.0
+h5py==3.8.0
+httpcore==1.0.9
+httplib2==0.22.0
+httpx==0.28.1
+huggingface-hub==0.26.3
+idna==3.4
+imageio==2.29.0
+ipykernel==6.22.0
+ipython==8.13.2
+ipython-genutils==0.2.0
+ipywidgets==8.0.6
+isodate==0.6.1
+isoduration==20.11.0
+itsdangerous==2.1.2
+jedi==0.18.2
+Jinja2==3.1.2
+joblib==1.2.0
+jsonpointer==2.3
+jsonschema==4.17.3
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.6.3
+jupyter_client==8.2.0
+jupyter_core==5.3.0
+jupyter_server==2.5.0
+jupyter_server_terminals==0.4.4
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.7
+keras==2.13.1rc0
+keyboard==0.13.5
+kiwisolver==1.4.4
+langcodes==3.5.0
+language_data==1.3.0
+lazy_loader==0.2
+libclang==16.0.0
+lxml==4.9.3
+marisa-trie==1.2.1
+Markdown==3.4.3
+markdown-it-py==3.0.0
+MarkupSafe==2.1.2
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mistune==2.0.5
+multidict==6.0.4
+murmurhash==1.0.11
+nbclassic==1.0.0
+nbclient==0.7.4
+nbconvert==7.3.1
+nbformat==5.8.0
+nest-asyncio==1.5.6
+networkx==3.1
+nltk==3.8.1
+notebook==6.5.4
+notebook_shim==0.2.3
+nulltype==2.3.1
+numpy==2.0.2
+oauth2client==4.1.3
+oauthlib==3.2.2
+onshape-client==1.6.3
+opencv-python==4.7.0.72
+opt-einsum==3.3.0
+outcome==1.2.0
+packaging==23.0
+pandas==2.0.1
+pandocfilters==1.5.0
+parso==0.8.3
+pdf==2020.11.12
+pdfminer==20191125
+pdfminer.six==20221105
+pdfplumber==0.10.0
+pdftotree==0.5.0
+pexpect==4.8.0
+pickleshare==0.7.5
+pigar==2.1.1
+Pillow==9.5.0
+Pint==0.24.4
+pipreqs==0.4.13
+platformdirs==3.5.0
+plumber==1.7
+pooch==1.8.2
+preshed==3.0.9
+prometheus-client==0.16.0
+prompt-toolkit==3.0.38
+protobuf==4.23.0
+psutil==5.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+pycryptodome==3.18.0
+pydantic==2.10.2
+pydantic_core==2.27.1
+Pygments==2.15.1
+pyobjc==9.2
+pyobjc-core==9.2
+pyobjc-framework-Accessibility==9.2
+pyobjc-framework-Accounts==9.2
+pyobjc-framework-AddressBook==9.2
+pyobjc-framework-AdServices==9.2
+pyobjc-framework-AdSupport==9.2
+pyobjc-framework-AppleScriptKit==9.2
+pyobjc-framework-AppleScriptObjC==9.2
+pyobjc-framework-ApplicationServices==9.2
+pyobjc-framework-AppTrackingTransparency==9.2
+pyobjc-framework-AudioVideoBridging==9.2
+pyobjc-framework-AuthenticationServices==9.2
+pyobjc-framework-AutomaticAssessmentConfiguration==9.2
+pyobjc-framework-Automator==9.2
+pyobjc-framework-AVFoundation==9.2
+pyobjc-framework-AVKit==9.2
+pyobjc-framework-BusinessChat==9.2
+pyobjc-framework-CalendarStore==9.2
+pyobjc-framework-CallKit==9.2
+pyobjc-framework-CFNetwork==9.2
+pyobjc-framework-ClassKit==9.2
+pyobjc-framework-CloudKit==9.2
+pyobjc-framework-Cocoa==9.2
+pyobjc-framework-Collaboration==9.2
+pyobjc-framework-ColorSync==9.2
+pyobjc-framework-Contacts==9.2
+pyobjc-framework-ContactsUI==9.2
+pyobjc-framework-CoreAudio==9.2
+pyobjc-framework-CoreAudioKit==9.2
+pyobjc-framework-CoreBluetooth==9.2
+pyobjc-framework-CoreData==9.2
+pyobjc-framework-CoreHaptics==9.2
+pyobjc-framework-CoreLocation==9.2
+pyobjc-framework-CoreMedia==9.2
+pyobjc-framework-CoreMediaIO==9.2
+pyobjc-framework-CoreMIDI==9.2
+pyobjc-framework-CoreML==9.2
+pyobjc-framework-CoreMotion==9.2
+pyobjc-framework-CoreServices==9.2
+pyobjc-framework-CoreSpotlight==9.2
+pyobjc-framework-CoreText==9.2
+pyobjc-framework-CoreWLAN==9.2
+pyobjc-framework-CryptoTokenKit==9.2
+pyobjc-framework-DataDetection==9.2
+pyobjc-framework-DeviceCheck==9.2
+pyobjc-framework-DictionaryServices==9.2
+pyobjc-framework-DiscRecording==9.2
+pyobjc-framework-DiscRecordingUI==9.2
+pyobjc-framework-DiskArbitration==9.2
+pyobjc-framework-DVDPlayback==9.2
+pyobjc-framework-EventKit==9.2
+pyobjc-framework-ExceptionHandling==9.2
+pyobjc-framework-ExecutionPolicy==9.2
+pyobjc-framework-ExternalAccessory==9.2
+pyobjc-framework-FileProvider==9.2
+pyobjc-framework-FileProviderUI==9.2
+pyobjc-framework-FinderSync==9.2
+pyobjc-framework-FSEvents==9.2
+pyobjc-framework-GameCenter==9.2
+pyobjc-framework-GameController==9.2
+pyobjc-framework-GameKit==9.2
+pyobjc-framework-GameplayKit==9.2
+pyobjc-framework-ImageCaptureCore==9.2
+pyobjc-framework-IMServicePlugIn==9.2
+pyobjc-framework-InputMethodKit==9.2
+pyobjc-framework-InstallerPlugins==9.2
+pyobjc-framework-InstantMessage==9.2
+pyobjc-framework-Intents==9.2
+pyobjc-framework-IntentsUI==9.2
+pyobjc-framework-IOBluetooth==9.2
+pyobjc-framework-IOBluetoothUI==9.2
+pyobjc-framework-IOSurface==9.2
+pyobjc-framework-iTunesLibrary==9.2
+pyobjc-framework-KernelManagement==9.2
+pyobjc-framework-LatentSemanticMapping==9.2
+pyobjc-framework-LaunchServices==9.2
+pyobjc-framework-libdispatch==9.2
+pyobjc-framework-libxpc==9.2
+pyobjc-framework-LinkPresentation==9.2
+pyobjc-framework-LocalAuthentication==9.2
+pyobjc-framework-LocalAuthenticationEmbeddedUI==9.2
+pyobjc-framework-MailKit==9.2
+pyobjc-framework-MapKit==9.2
+pyobjc-framework-MediaAccessibility==9.2
+pyobjc-framework-MediaLibrary==9.2
+pyobjc-framework-MediaPlayer==9.2
+pyobjc-framework-MediaToolbox==9.2
+pyobjc-framework-Metal==9.2
+pyobjc-framework-MetalKit==9.2
+pyobjc-framework-MetalPerformanceShaders==9.2
+pyobjc-framework-MetalPerformanceShadersGraph==9.2
+pyobjc-framework-MetricKit==9.2
+pyobjc-framework-MLCompute==9.2
+pyobjc-framework-ModelIO==9.2
+pyobjc-framework-MultipeerConnectivity==9.2
+pyobjc-framework-NaturalLanguage==9.2
+pyobjc-framework-NetFS==9.2
+pyobjc-framework-Network==9.2
+pyobjc-framework-NetworkExtension==9.2
+pyobjc-framework-NotificationCenter==9.2
+pyobjc-framework-OpenDirectory==9.2
+pyobjc-framework-OSAKit==9.2
+pyobjc-framework-OSLog==9.2
+pyobjc-framework-PassKit==9.2
+pyobjc-framework-PencilKit==9.2
+pyobjc-framework-PHASE==9.2
+pyobjc-framework-Photos==9.2
+pyobjc-framework-PhotosUI==9.2
+pyobjc-framework-PreferencePanes==9.2
+pyobjc-framework-PushKit==9.2
+pyobjc-framework-Quartz==9.2
+pyobjc-framework-QuickLookThumbnailing==9.2
+pyobjc-framework-ReplayKit==9.2
+pyobjc-framework-SafariServices==9.2
+pyobjc-framework-SceneKit==9.2
+pyobjc-framework-ScreenCaptureKit==9.2
+pyobjc-framework-ScreenSaver==9.2
+pyobjc-framework-ScreenTime==9.2
+pyobjc-framework-ScriptingBridge==9.2
+pyobjc-framework-SearchKit==9.2
+pyobjc-framework-Security==9.2
+pyobjc-framework-SecurityFoundation==9.2
+pyobjc-framework-SecurityInterface==9.2
+pyobjc-framework-ServiceManagement==9.2
+pyobjc-framework-ShazamKit==9.2
+pyobjc-framework-Social==9.2
+pyobjc-framework-SoundAnalysis==9.2
+pyobjc-framework-Speech==9.2
+pyobjc-framework-SpriteKit==9.2
+pyobjc-framework-StoreKit==9.2
+pyobjc-framework-SyncServices==9.2
+pyobjc-framework-SystemConfiguration==9.2
+pyobjc-framework-SystemExtensions==9.2
+pyobjc-framework-UniformTypeIdentifiers==9.2
+pyobjc-framework-UserNotifications==9.2
+pyobjc-framework-UserNotificationsUI==9.2
+pyobjc-framework-VideoSubscriberAccount==9.2
+pyobjc-framework-VideoToolbox==9.2
+pyobjc-framework-Virtualization==9.2
+pyobjc-framework-Vision==9.2
+pyobjc-framework-WebKit==9.2
+pyparsing==3.0.9
+pypdf==3.12.2
+PyPDF2==3.0.1
+pypdfium2==4.18.0
+pyrsistent==0.19.3
+pyserial==3.5
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-dotenv==1.1.1
+python-json-logger==2.0.7
+python-osc==1.9.0
+pytz==2023.3
+pyvista==0.45.2
+PyWavelets==1.4.1
+PyYAML==6.0
+pyzmq==25.0.2
+qtconsole==5.4.2
+QtPy==2.3.1
+ravenclaw==2020.11.12
+rdflib==6.3.2
+regex==2023.6.3
+requests==2.29.0
+requests-oauthlib==1.3.1
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.9.4
+rsa==4.9
+ruamel.yaml==0.18.14
+ruamel.yaml.clib==0.2.12
+safetensors==0.4.5
+scikit-image==0.20.0
+scikit-learn==1.2.2
+scipy==1.10.1
+scooby==0.10.1
+seaborn==0.12.2
+selectivesearch==0.4
+selenium==4.11.2
+Send2Trash==1.8.2
+serpapi==0.1.5
+shellingham==1.5.4
+silverware==2020.11.12
+simple-websocket==0.10.1
+six==1.16.0
+sklearn==0.0.post7
+slytherin==2020.11.12
+smart-open==7.0.5
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.4.1
+spacy==3.8.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+SPARQLWrapper==2.0.0
+split-folders==0.5.1
+srsly==2.4.8
+stack-data==0.6.2
+tabula-py==2.7.0
+tenacity==8.5.0
+tensorboard==2.13.0
+tensorboard-data-server==0.7.0
+tensorflow==2.13.0rc0
+tensorflow-estimator==2.13.0rc0
+tensorflow-macos==2.13.0rc0
+termcolor==2.3.0
+terminado==0.17.1
+thinc==8.3.2
+threadpoolctl==3.1.0
+tifffile==2023.4.12
+tinycss2==1.2.1
+tokenizers==0.20.3
+tornado==6.3.1
+tqdm==4.65.0
+traitlets==5.9.0
+transformers==4.46.3
+trio==0.22.2
+trio-websocket==0.10.3
+turbo==0.5.1
+Turbo-Flask==0.8.4
+txt==2020.11.12
+typer==0.14.0
+typing_extensions==4.12.2
+tzdata==2023.3
+uri-template==1.2.0
+uritemplate==3.0.1
+urllib3==1.26.15
+vtk==9.4.2
+Wand==0.6.11
+wasabi==1.1.3
+wcwidth==0.2.6
+weasel==0.4.1
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.5.1
+websockets==15.0.1
+Werkzeug==2.3.4
+widgetsnbextension==4.0.7
+wrapt==1.14.1
+wsproto==1.2.0
+yarg==0.1.9
+yarl==1.9.2
